[gd_scene load_steps=36 format=3 uid="uid://sjng3lyk2bmx"]

[ext_resource type="Script" path="res://man_with_gun.gd" id="1_q0vg4"]
[ext_resource type="Texture2D" uid="uid://dpyedyv6rl6ih" path="res://animations/Soldier/soldier_1-IDLE_with_gun.png" id="2_ba5md"]
[ext_resource type="Texture2D" uid="uid://c4f2mtw8osk8g" path="res://animations/Soldier/soldier_walk_with_gun.png" id="3_8wnvx"]
[ext_resource type="Texture2D" uid="uid://c71sfi2cc6bo" path="res://animations/Soldier/soldier_jump2-Sheet.png" id="3_f8fbo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2rvlh"]
atlas = ExtResource("2_ba5md")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rex1"]
atlas = ExtResource("2_ba5md")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_txxe0"]
atlas = ExtResource("2_ba5md")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lhbh"]
atlas = ExtResource("2_ba5md")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a33sc"]
atlas = ExtResource("2_ba5md")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8wtv"]
atlas = ExtResource("2_ba5md")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3aqm"]
atlas = ExtResource("2_ba5md")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0haj"]
atlas = ExtResource("2_ba5md")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bno5l"]
atlas = ExtResource("2_ba5md")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv05h"]
atlas = ExtResource("2_ba5md")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl6cr"]
atlas = ExtResource("2_ba5md")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uauwa"]
atlas = ExtResource("2_ba5md")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulrl"]
atlas = ExtResource("3_f8fbo")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1415y"]
atlas = ExtResource("3_f8fbo")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_br2jr"]
atlas = ExtResource("3_f8fbo")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_62yav"]
atlas = ExtResource("3_f8fbo")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_djib0"]
atlas = ExtResource("3_f8fbo")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe6uh"]
atlas = ExtResource("3_f8fbo")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kr6ox"]
atlas = ExtResource("3_f8fbo")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6crd"]
atlas = ExtResource("3_f8fbo")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvhtw"]
atlas = ExtResource("3_f8fbo")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3pq5"]
atlas = ExtResource("3_8wnvx")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_170p0"]
atlas = ExtResource("3_8wnvx")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_184rw"]
atlas = ExtResource("3_8wnvx")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckeen"]
atlas = ExtResource("3_8wnvx")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dipto"]
atlas = ExtResource("3_8wnvx")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag208"]
atlas = ExtResource("3_8wnvx")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpvlv"]
atlas = ExtResource("3_8wnvx")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sskh"]
atlas = ExtResource("3_8wnvx")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_x58vj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rvlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rex1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txxe0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lhbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a33sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8wtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3aqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0haj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bno5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv05h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl6cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uauwa")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1415y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br2jr")
}],
"loop": false,
"name": &"jump_end",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_62yav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djib0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe6uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kr6ox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6crd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvhtw")
}],
"loop": false,
"name": &"jump_start",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3pq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_170p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_184rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckeen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dipto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag208")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpvlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sskh")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uswkf"]
radius = 23.0
height = 246.0

[node name="Man_with_gun" type="CharacterBody2D" groups=["player"]]
collision_mask = 3
script = ExtResource("1_q0vg4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(77, -31)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_x58vj")
animation = &"idle"
centered = false
offset = Vector2(-30.64, -31.565)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(77, -30)
shape = SubResource("CapsuleShape2D_uswkf")

[node name="shagi" type="AudioStreamPlayer" parent="."]

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(157, -85)

[node name="Muzzle2" type="Marker2D" parent="."]
position = Vector2(5, -85)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
